# simulated_web_agent

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  analysis.ipynb  analysis_result.csv  analysis_result.ipynb  conda-lock.yml  environment.yml  exp.ipynb  get_price.py  humanize.ipynb  pyproject.toml  requirements.txt  result.parquet  run_parallel.py  run_replay.py  selenium_exp.ipynb
output/0/: action_trace.txt  agent_1.pkl  agent_2.pkl  api_trace_13.json  api_trace_14.json  api_trace_17.json  api_trace_18.json  api_trace_19.json  api_trace_3.json  api_trace_6.json  api_trace_9.json  env_trace.txt  memory_trace_1.txt  page_1.html  page_3.html  persona.txt  result.json  stderr.txt  stdout.txt
output/1/: action_trace.txt  agent_2.pkl  agent_3.pkl  api_trace_18.json  api_trace_21.json  api_trace_22.json  api_trace_23.json  api_trace_26.json  api_trace_3.json  api_trace_6.json  api_trace_7.json  api_trace_9.json  humanized_memory.txt  intent.txt  memory_trace_3.txt  memory_trace_5.txt  memory_trace_6.txt  page_1.html  page_2.html  page_3.html  page_5.html  persona.txt  result.json
output/10/: agent_3.pkl  api_trace_1.json  api_trace_11.json  (+16 more)
personas/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  (+20 more)
personas_bak/: 0.json  1.json  10.json  12.json  13.json  14.json  16.json  18.json  2.json  22.json  25.json  26.json  27.json  37.json  38.json  39.json  4.json  41.json  42.json  43.json  47.json  5.json  50.json  51.json  55.json  56.json  57.json  6.json  9.json
test_data/: index.html  search_result.html
(+3194 files in other folders)
