[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Yuxuan Lu", email = "luyuxuanleo@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
description = ''
dynamic = ["version"]
keywords = []
license = "MIT"
name = "simulated-web-agent"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Documentation = "https://github.com/Yuxuan Lu/simulated-web-agent#readme"
Issues = "https://github.com/Yuxuan Lu/simulated-web-agent/issues"
Source = "https://github.com/Yuxuan Lu/simulated-web-agent"

[tool.hatch.version]
path = "src/simulated_web_agent/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/simulated_web_agent tests}"

[tool.coverage.run]
branch = true
omit = [
  "src/simulated_web_agent/__about__.py",
]
parallel = true
source_pkgs = ["simulated_web_agent", "tests"]

[tool.coverage.paths]
simulated_web_agent = ["src/simulated_web_agent", "*/simulated-web-agent/src/simulated_web_agent"]
tests = ["tests", "*/simulated-web-agent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
ignore = ['F401']

[tool.basedpyright]
typeCheckingMode = "basic"
